@@ -22,16 +22,17 @@ import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -40,8 +41,7 @@ class OkHttp3MetricsTests {
     @Test
     void shouldRecordInterceptorSuccessBypassAndFailure() throws Exception {
         SimpleMeterRegistry registry = new SimpleMeterRegistry();
-        InstrumentedInterceptor interceptor = new InstrumentedInterceptor(registry, "client",
-                Collections.singletonList(Tag.of("app", "test")));
+        InstrumentedInterceptor interceptor = new InstrumentedInterceptor(registry, "client", List.of(Tag.of("app", "test")));
         Request request = new Request.Builder().url("http://localhost/test").build();
         Response response = response(request);
         Interceptor.Chain chain = mock(Interceptor.Chain.class);
@@ -80,7 +80,7 @@ class OkHttp3MetricsTests {
 
         listener.callStart(call);
         listener.dnsStart(call, "localhost");
-        listener.dnsEnd(call, "localhost", Collections.singletonList(InetAddress.getLoopbackAddress()));
+        listener.dnsEnd(call, "localhost", List.of(InetAddress.getLoopbackAddress()));
         listener.connectStart(call, address, Proxy.NO_PROXY);
         listener.secureConnectStart(call);
         listener.secureConnectEnd(call, null);
@@ -112,8 +112,8 @@ class OkHttp3MetricsTests {
     void shouldBuildInstrumentedClientsAndMapUrls() {
         SimpleMeterRegistry registry = new SimpleMeterRegistry();
         OkHttpClient raw = new OkHttpClient();
-        List<java.util.function.BiFunction<Request, Response, KeyValue>> tags = Collections.singletonList(
-                (request, response) -> KeyValue.of("status", String.valueOf(response.code())));
+        List<java.util.function.BiFunction<Request, Response, KeyValue>> tags =
+                List.of((request, response) -> KeyValue.of("status", String.valueOf(response.code())));
 
         OkHttpClient first = InstrumentedOkHttpClients.create(registry);
         OkHttpClient second = InstrumentedOkHttpClients.create(registry, raw);
@@ -121,8 +121,7 @@ class OkHttp3MetricsTests {
         OkHttpClient fourth = InstrumentedOkHttpClients.create(registry, raw, UrlMapperEnum.FULL_URL, true);
         OkHttpClient fifth = InstrumentedOkHttpClients.create(registry, raw, tags, UrlMapperEnum.ENCODED_PATH, false);
         OkHttpClient configured = InstrumentedOkHttpClients.create(registry, raw,
-                Collections.singletonMap("app", "test"), Collections.singletonList("tenant"), tags,
-                UrlMapperEnum.TOP_PRIVATE_DOMAIN, true);
+                Map.of("app", "test"), List.of("tenant"), tags, UrlMapperEnum.TOP_PRIVATE_DOMAIN, true);
 
         assertEquals(2, configured.networkInterceptors().size());
         assertNotNull(configured.eventListenerFactory());
@@ -135,7 +134,7 @@ class OkHttp3MetricsTests {
         assertTrue(UrlMapperEnum.ENCODED_PATH.equals(UrlMapperEnum.ENCODED_PATH));
         assertEquals("Encoded Path ", UrlMapperEnum.ENCODED_PATH.getName());
 
-        Arrays.asList(first, second, third, fourth, fifth, configured, raw).forEach(this::shutdown);
+        List.of(first, second, third, fourth, fifth, configured, raw).forEach(this::shutdown);
     }
 
     @Test
@@ -146,10 +145,10 @@ class OkHttp3MetricsTests {
 
         new OkHttpDispatcherMetrics(client).bindTo(registry);
         new OkHttpDispatcherMetrics(client, "custom").bindTo(registry);
-        new OkHttpDispatcherMetrics(client, "tagged", Collections.singletonList(Tag.of("app", "test"))).bindTo(registry);
+        new OkHttpDispatcherMetrics(client, "tagged", List.of(Tag.of("app", "test"))).bindTo(registry);
         new OkHttpCacheMetrics(client).bindTo(registry);
         new OkHttpCacheMetrics(client, "cache").bindTo(registry);
-        new OkHttpCacheMetrics(client, "tagged.cache", Collections.singletonList(Tag.of("app", "test"))).bindTo(registry);
+        new OkHttpCacheMetrics(client, "tagged.cache", List.of(Tag.of("app", "test"))).bindTo(registry);
 
         assertNotNull(registry.find(OkHttp3Metrics.OKHTTP3_POOL_METRIC_NAME_PREFIX
                 + OkHttpDispatcherMetrics.METRIC_NAME_DISPATCHER_MAX_REQUESTS).meter());
@@ -165,7 +164,7 @@ class OkHttp3MetricsTests {
     @Test
     void shouldConstructNestedListenerAndTagHandler() {
         EventListener listener = new EventListener() { };
-        assertNotNull(new NestedEventListener(Collections.singletonList(listener)));
+        assertNotNull(new NestedEventListener(List.of(listener)));
         OKhttp3MetricsSpecificTagHandler handler = () -> (request, response) -> KeyValue.of("code", "200");
         assertEquals("200", handler.getHandler().apply(
                 new Request.Builder().url("http://localhost").build(),
